{
  "version": 4,
  "terraform_version": "1.2.1",
  "serial": 6,
  "lineage": "70fd4cd7-b1cb-2e25-7246-84be139b9495",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "http-server",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "443"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2022-06-03T08:29:34.207-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/skillup-351113/global/firewalls/allow-web",
            "log_config": [],
            "name": "allow-web",
            "network": "https://www.googleapis.com/compute/v1/projects/skillup-351113/global/networks/prod-mobidev-vpc",
            "priority": 1000,
            "project": "skillup-351113",
            "self_link": "https://www.googleapis.com/compute/v1/projects/skillup-351113/global/firewalls/allow-web",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "allow-web"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2022-06-03T08:29:34.229-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/skillup-351113/global/firewalls/allow-ssh",
            "log_config": [],
            "name": "allow-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/skillup-351113/global/networks/prod-mobidev-vpc",
            "priority": 1000,
            "project": "skillup-351113",
            "self_link": "https://www.googleapis.com/compute/v1/projects/skillup-351113/global/firewalls/allow-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "allow-ssh"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "id": "projects/skillup-351113/global/networks/prod-mobidev-vpc",
            "mtu": 0,
            "name": "prod-mobidev-vpc",
            "project": "skillup-351113",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/skillup-351113/global/networks/prod-mobidev-vpc"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2022-06-03T08:29:35.538-07:00",
            "gateway_address": "10.20.1.1",
            "id": "projects/skillup-351113/regions/europe-west1/subnetworks/prod-mobidev-vpc-private",
            "ip_cidr_range": "10.20.1.0/24",
            "name": "prod-mobidev-vpc-private",
            "network": "https://www.googleapis.com/compute/v1/projects/skillup-351113/global/networks/prod-mobidev-vpc",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "skillup-351113",
            "purpose": "PRIVATE",
            "region": "europe-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/skillup-351113/regions/europe-west1/subnetworks/prod-mobidev-vpc-private",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2022-06-03T08:29:35.744-07:00",
            "gateway_address": "10.20.0.1",
            "id": "projects/skillup-351113/regions/europe-west1/subnetworks/prod-mobidev-vpc-public",
            "ip_cidr_range": "10.20.0.0/24",
            "name": "prod-mobidev-vpc-public",
            "network": "https://www.googleapis.com/compute/v1/projects/skillup-351113/global/networks/prod-mobidev-vpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "skillup-351113",
            "purpose": "PRIVATE",
            "region": "europe-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/skillup-351113/regions/europe-west1/subnetworks/prod-mobidev-vpc-public",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    }
  ]
}